--- a/package.json
+++ b/package.json
@@ -26,19 +26,29 @@
     "react-helmet": "^2.1.1",
     "react-intl": "^2.0.0-beta-1",
     "react-router": "^1.0.0",
-    "react-tap-event-plugin": "^0.2.1"
+    "react-tap-event-plugin": "^0.2.1",
+    "vtex-css-utils": "^1.2.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.1",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.14.5",
     "eslint": "^1.3.1",
     "eslint-config-vtex": "^2.0.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.0.0",
     "expose-loader": "^0.7.0",
+    "file-loader": "^0.8.4",
     "gitbook-cli": "^1.0.1",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.3.4",
+    "style-loader": "^0.13.0",
+    "svgo": "^0.6.0",
+    "svgo-loader": "^1.1.0",
+    "url-loader": "^0.5.7",
     "webpack": "~1.12.2"
   }
 }
