--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "docs:publish": "npm run docs:clean && npm run docs:build && cd docs/_book && git init && git commit --allow-empty -m 'Update book' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'Update book' && git push git@github.com:vtex-apps/storefront-sdk gh-pages --force"
   },
   "dependencies": {
-    "alt": "^0.17.4",
     "debounce": "^1.0.0",
-    "es6-promise": "^3.1.2",
+    "es6-promise": "^3.2.1",
     "hoist-non-react-statics": "^1.0.3",
     "invariant": "^2.2.0",
     "lodash-compat": "^3.10.1",
@@ -27,6 +26,13 @@
     "react-dom": "^15.0.1",
     "react-helmet": "^2.1.1",
     "react-intl": "^2.0.0-beta-1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "redux-logger": "^2.2.1",
+    "redux-thunk": "^2.1.0",
     "vtex-css-utils": "^1.2.0",
     "warning": "^2.1.0"
   },
