--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "alt": "^0.17.4",
     "debounce": "^1.0.0",
     "hoist-non-react-statics": "^1.0.3",
+    "invariant": "^2.2.0",
     "lodash-compat": "^3.10.1",
     "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.3",
@@ -27,12 +28,14 @@
     "react-intl": "^2.0.0-beta-1",
     "react-router": "^1.0.2",
     "react-tap-event-plugin": "^0.2.1",
-    "vtex-css-utils": "^1.2.0"
+    "vtex-css-utils": "^1.2.0",
+    "warning": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.1",
     "babel-loader": "^5.3.2",
+    "babel-plugin-dev-expression": "^0.1.0",
     "css-loader": "^0.14.5",
     "eslint": "^1.3.1",
     "eslint-config-vtex": "^2.0.0",
