--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.3",
     "react-addons-shallow-compare": "^0.14.3",
+    "react-dnd": "^2.0.2",
     "react-dom": "^0.14.3",
     "react-helmet": "^2.1.1",
     "react-intl": "^2.0.0-beta-1",
